# aida_agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: paths.csv  score_diffs.csv  xgb.pmml
data/data/: header.csv
data/open_scores/: open_source_tree_scores.csv
data/swift_scores/: swift_scores.csv  swift_tree_scores.csv
dummy_artifacts/: config.json  dataset_sample.csv  inference.py  reference.py
src/: agent.py  server.py  state.py  tools.py
src/tools/: compare_models.py  compare_scores.py  create_pmml.py  trace_path.py
static/: aida_diagnostic_agent_flow.html  index.html  script.js  styles.css
upload/: open_source_scores.csv  xgb_model.json
